<#PKG_NAME#> (<#VERSION#>) <#UBUNTU_RELEASE#>; urgency=low

  * (almost) daily release of the current head
  * Github issues 766, 768, 769, 779

 -- js <exaile-users@googlegroups.com>  <#TIMESTAMP#>