@@ -1,6 +1,12 @@
 <#PKG_NAME#> (<#VERSION#>) <#UBUNTU_RELEASE#>; urgency=low
 
   * (almost) daily release of the current head
-  * Github issues 766, 768, 769, 779
+  * Fixes: https://github.com/exaile/exaile/issues/766
+  * Fixes: https://github.com/exaile/exaile/issues/768
+  * Fixes: https://github.com/exaile/exaile/issues/769
+  * Fixes: https://github.com/exaile/exaile/issues/779
+  * Fixes: https://github.com/exaile/exaile/issues/775
+  * Fixes: https://github.com/exaile/exaile/issues/616
+  * Fixes: https://github.com/exaile/exaile/issues/777
 
  -- js <exaile-users@googlegroups.com>  <#TIMESTAMP#>
